[package]
name = "rmbg"
description = "Rust interface for BRIA Background Removal v1.4 Model Library"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/pekc83/rmbg"
readme = "README.md"
categories = ["multimedia::images"]
keywords = ["background-removal", "machine-learning", "onnx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ort = { version = "2.0.0-rc.6", default-features = false, features = [
    "ndarray"
] }
image = "0.25.0"
anyhow = "1.0.89"
ndarray = "0.16.1"
fast_image_resize = "5.0.0"

[dev-dependencies]
ort = { version = "2.0.0-rc.6", default-features = false, features = [
    "download-binaries"
] }
